--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
+  <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque totam, a, blanditiis praesentium unde non, laboriosam aliquid ratione fugiat dignissimos repellat. Corporis, nostrum! Dolorem, animi iste veritatis vel aperiam nam!</p>
   
 </body>
 </html>
