--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+   <nav>
+    <a href="#" id="logo">
+      <img src="assets/icons/Logo.svg" alt="Logomarca">
+    </a>
+
+    <ul id="primary-menu">
+      <li>
+        <a href="#">
+          <img src="assets/icons/MagnifyingGlass.svg" alt="Ícone de pesquisa">
+        </a>
+      </li>
+      <li><a href="#">Explorer</a></li>
+      <li><a href="#">Minhas Viagens</a></li>
+      <li><a href="#">
+        <img src="assets/Profile pic.png" alt="Foto de perfil">
+      </a>
+    </li>
+      </ul>
+   </nav>
 </body>
 </html>
