--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travelgram | Perfil de viagens</title>
   <link rel="stylesheet" href="styles/index.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  
+
 </head>
 <body>
+  
    <nav>
     <a href="#" id="logo">
       <img src="assets/icons/Logo.svg" alt="Logomarca">
@@ -23,7 +27,7 @@
         </a>
       </li>
       <li><a href="#">Explorer</a></li>
-      <li><a href="#">Minhas Viagens</a></li>
+      <li><a href="#">Minhas viagens</li>
       <li><a href="#">
         <img src="assets/Profile pic.png" alt="Foto de perfil">
       </a>
