--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 </head>
 <body>
-  
-   <nav>
+  <div class="bg-surface-color"> 
+   <nav class="container">
     <a href="#" id="logo">
       <img src="assets/icons/Logo.svg" alt="Logomarca">
     </a>
@@ -34,5 +34,6 @@
     </li>
       </ul>
    </nav>
+   </div>
 </body>
 </html>
