--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="#" id="logo">
       <img src="assets/icons/Logo.svg" alt="Logomarca">
     </a>
-
+    
     <ul id="primary-menu">
       <li>
         <a href="#">
@@ -34,6 +34,39 @@
     </li>
       </ul>
    </nav>
-   </div>
+   <header>
+    <div class="container">
+      <div id="profile>">
+        <img src="assets/Profile pic.png" alt="Foto de perfil">
+        <div>
+          <h1>Isabela Torres</h1>
+          <p>Amante de viagens, cultura e gastronomia. 🌍✈️  
+             Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸
+            </p>
+
+        </div>
+    </div>
+    <ul id="info">
+      <li>
+        <img src="assets/icons/MapPin.svg" alt="Icone de Mapa">
+        <span>São Paulo, Brazil
+        </span>
+        </li>
+
+        <li>
+        <img src="assets/icons/AirplaneTilt.svg" alt="Icone de aviao">
+        <span>37 países
+
+        </span>
+        </li>
+        <li>
+        <img src="assets/icons/Image.svg" alt="240 fotos">
+        <span>240 fotos
+
+        </span>
+        </li>
+    </ul>
+   </header>
+  </div>
 </body>
 </html>
