--- a/index.html
+++ b/index.html
@@ -1,72 +1,70 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travelgram | Perfil de viagens</title>
   <link rel="stylesheet" href="styles/index.css">
-
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-  
-
 </head>
+
 <body>
-  <div class="bg-surface-color"> 
-   <nav class="container">
-    <a href="#" id="logo">
-      <img src="assets/icons/Logo.svg" alt="Logomarca">
-    </a>
-    
-    <ul id="primary-menu">
-      <li>
-        <a href="#">
-          <img src="assets/icons/MagnifyingGlass.svg" alt="Ícone de pesquisa">
-        </a>
-      </li>
-      <li><a href="#">Explorer</a></li>
-      <li><a href="#">Minhas viagens</li>
-      <li><a href="#">
-        <img src="assets/Profile pic.png" alt="Foto de perfil">
+  <div class="bg-surface-color">
+    <nav class="container">
+      <a href="#" id="logo">
+        <img src="assets/icons/Logo.svg" alt="Logomarca">
       </a>
-    </li>
+
+      <ul id="primary-menu">
+        <li>
+          <a href="#">
+            <img src="assets/icons/MagnifyingGlass.svg" alt="Ícone de pesquisa">
+          </a>
+        </li>
+        <li><a href="#">Explorer</li>
+        <li><a href="#">Minhas viagens</li>
+        <li><a href="#"></li>
+            <img src="assets/Profile pic.png" alt="Foto de perfil">
+          </a>
+        
       </ul>
-   </nav>
-   <header>
-    <div class="container">
-      <div id="profile>">
-        <img src="assets/Profile pic.png" alt="Foto de perfil">
-        <div>
-          <h1>Isabela Torres</h1>
-          <p>Amante de viagens, cultura e gastronomia. 🌍✈️  
-             Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸
+
+    </nav>
+    <header>
+      <div class="container">
+        <div id="profile">
+          <img src="assets/Profile pic.png" alt="Foto de perfil">
+
+          <div>
+            <h1>Isabela Torres</h1>
+            <p>
+              Amante de viagens, cultura e gastronomia. 🌍✈️<br>
+              Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso
+              planeta a partir da movimentada cidade de São Paulo. 🏙️📸
             </p>
+          </div>
 
+          <ul id="info">
+            <li>
+              <img src="assets/icons/MapPin.svg" alt="Icone de Mapa">
+              <span>São Paulo, Brazil</span>
+            </li>
+
+            <li>
+              <img src="assets/icons/AirplaneTilt.svg" alt="Icone de aviao">
+              <span>37 países </span>
+            </li>
+            <li>
+              <img src="assets/icons/Image.svg" alt="240 fotos">
+              <span>240 fotos</span>
+            </li>
+          </ul>
         </div>
-    </div>
-    <ul id="info">
-      <li>
-        <img src="assets/icons/MapPin.svg" alt="Icone de Mapa">
-        <span>São Paulo, Brazil
-        </span>
-        </li>
-
-        <li>
-        <img src="assets/icons/AirplaneTilt.svg" alt="Icone de aviao">
-        <span>37 países
-
-        </span>
-        </li>
-        <li>
-        <img src="assets/icons/Image.svg" alt="240 fotos">
-        <span>240 fotos
-
-        </span>
-        </li>
-    </ul>
-   </header>
+      </div>
+    </header>
   </div>
-</body>
+
 </html>
