--- a/index.html
+++ b/index.html
@@ -85,5 +85,17 @@
     <img src="assets/images/Image 12.png" alt="Imagem de viagem">
     
   </main>
+  <footer class="container">
+    <span>
+      Travelgram &copy; 2025 
+    </span>
+    <span>
+      Termos de uso
+    </span>
+    <span>
+      Política de privacidade
+    </span>
+  </footer>
+    
 </body>
 </html>
